ejemplo de iterpolacion, data binding y correcion al sub modulo, el ruteo no funcionaba ya que no se habian importado los mimos como hijos de el principal

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,3 +1,7 @@
 <p>login works! hola chicos</p>
 
+<button [disabled]='isDisabled'>OK</button>             //Data binding
+ 
+<button disabled='{{isDisabled}}'>Cancel</button>       //Interpolation
+
 <router-outlet></router-outlet>
