ejemplo interpolacion y binding

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,8 +1,22 @@
-<p>home works!</p>
-<a class="card"  rel="noopener" routerLink="/home/mimodulo/estudiantes">
+<p>Bienvenidos</p>
+<p>Nombre: {{nombre}}</p>
+<p>Edad: {{edad<18 ? "Menor de edad":"Mayor de edad"}}</p>
+<p>Prueba con operadores: {{getNumero()+5}}</p>
+<p>carrera: {{carrera.value}}</p>
+Ingrese nombre de la carrera: <input type="text"#carrera (keyup)="0" [disabled]= "HabilitarInput">
+
+<br/>
+<br/>
+Registrado: <input type="checkbox" id = "registro" [checked] = "RegistroUsuario"> 
+{{getRegistroUsu()}}
+<br/>
+<br/>
+
+<a class="card"  rel="noopener" routerLink="/mimodulo/estudiantes">
     <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/></svg>
 
     <span>Estudiantes</span>
+    
 
     <svg class="material-icons" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/></svg>    </a>
 
