Aplicación de interpolación y binding al proyecto de angular visto en clase, basandome en el tutorial de los heroes de angular

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,5 @@
 <h2>{{hero.name | uppercase}} Details</h2>
-<!-- Interpolación: El id de un heroe puede cambiar y mostrarse en pantalla -->
+<!-- cd: El id de un heroe puede cambiar y mostrarse en pantalla -->
 <div><span>id: </span>{{hero.id}}</div>
 <div>
   <label for="name">Hero name: </label>
